apps/wildfly/base/my-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-tls
  annotations:
    cert-manager.io/issuer: test-ca-issuer
    # cert-manager.io/issuer: "letsencrypt-nginx"
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myservicea.test
    - myserviceb.test
    secretName: mywildfy-cert
  defaultBackend:
    service:
      name: wildfly-service
      port:
        number: 8080
  rules:
    # Required entry in /etc/hosts file: <IP of ingress> myservicea.test
    - host: myservicea.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wildfly-service
                port:
                  number: 8080
    - host: myserviceb.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wildfly-service
                port:
                  number: 9990
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wildfly-service
                port:
                  number: 8080
  # rules:
  # - host: "localhost"
  #   http:
  #     paths:
  #     - path: /testpath
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: wildfly-service
  #           port:
  #             number: 80
