apps/wildfly/base/my-ingress.notWorking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /tmp(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wildfly-service
            port:
              number: 8080
      - path: /admin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wildfly-service
            port:
              number: 9990
      - path: /console(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wildfly-service
            port:
              number: 9990
  # defaultBackend:
  #   service:
  #     name: wildfly-service
  #     port:
  #       number: 8080
  # rules:
  #   # Required entry in /etc/hosts file: <IP of ingress> myservicea.test
  #   - host: myservicea.test
  #     http:
  #       paths:
  #         - path: /tmp
  #           pathType: Prefix
  #           backend:
  #             service:
  #               name: wildfly-service
  #               port:
  #                 number: 8080
  #   - http:
  #       paths:
  #         - path: /
  #           pathType: Prefix
  #           backend:
  #             service:
  #               name: wildfly-service
  #               port:
  #                 number: 8080
  # rules:
  # - host: "localhost"
  #   http:
  #     paths:
  #     - path: /testpath
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: wildfly-service
  #           port:
  #             number: 80
